# ticklog

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
benches/: end_to_end.rs  message_types.rs  single_record.rs
benches/cmp/latency/: latency_vs_baseline.rs  latency_vs_env_logger.rs  latency_vs_slog.rs  latency_vs_tracing.rs
benches/cmp/scaling/: scaling_vs_baseline.rs  scaling_vs_env_logger.rs  scaling_vs_slog.rs  scaling_vs_tracing.rs
benches/cmp/throughput/: throughput_vs_baseline.rs  throughput_vs_env_logger.rs  throughput_vs_slog.rs  throughput_vs_tracing.rs
benches/common/: affinity.rs  workloads.rs
benches/opt/: scratch_overhead.rs
cross-lang-bench/: .gitignore  README.md  calibrate.c  results.py  run.sh  setup.sh
cross-lang-bench/cpp/nanolog/: CMakeLists.txt  main.cpp
cross-lang-bench/cpp/quill/: CMakeLists.txt  main.cpp
cross-lang-bench/go/: go.mod  go.sum
cross-lang-bench/go/tsc/: tsc.go  tsc_amd64.s  tsc_arm64.s
cross-lang-bench/go/zap/: main.go
cross-lang-bench/go/zerolog/: main.go
cross-lang-bench/rust/ticklog/: Cargo.toml
cross-lang-bench/rust/ticklog/src/: main.rs
examples/: basic.rs
examples/sinks/: custom.rs  logroller.rs  stderr.rs  tracing_appender.rs
scripts/: collect_spec.sh  run_cmp_benches.sh
src/: affinity.rs  builder.rs  drain.rs  encode.rs  error.rs  format.rs  guard.rs  level.rs  lib.rs  macros.rs  record.rs  ring.rs  thread_buf.rs  timestamp.rs
src/sink/: console.rs  file.rs  mod.rs  writer.rs
tests/: arg_eval_once.rs  backpressure_block.rs  backpressure_drop.rs  builder_lifecycle.rs  fanout.rs  level_filter.rs  lifecycle.rs  logging.rs  multithread.rs  oversized_record.rs  warmup.rs
