[package]
authors = ["Tensorbinge <tensorbinge@gmail.com>"]
categories = ["development-tools::debugging"]
description = "A fast, minimal logging library for Rust, designed for performance-critical applications, e.g. high-frequency trading."
edition = "2024"
keywords = ["logging", "low-latency", "performance"]
license = "MIT"
name = "ticklog"
repository = "https://github.com/tensorbinge/ticklog"
rust-version = "1.85"
version = "0.1.0"

[dev-dependencies]
criterion = {version = "0.5", features = ["html_reports"]}
env_logger = "0.11"
log = "0.4"
logroller = "0.1.12"
slog = "2.7"
slog-async = "2.8"
tempfile = "3"
tracing = "0.1"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3"

# Ticklog regression benches

[[bench]]
harness = false
name = "single_record"

[[bench]]
harness = false
name = "message_types"

[[bench]]
harness = false
name = "end_to_end"

# Latency comparison

[[bench]]
harness = false
name = "latency_vs_baseline"
path = "benches/cmp/latency/latency_vs_baseline.rs"

[[bench]]
harness = false
name = "latency_vs_tracing"
path = "benches/cmp/latency/latency_vs_tracing.rs"

[[bench]]
harness = false
name = "latency_vs_env_logger"
path = "benches/cmp/latency/latency_vs_env_logger.rs"

[[bench]]
harness = false
name = "latency_vs_slog"
path = "benches/cmp/latency/latency_vs_slog.rs"

# Throughput comparison

[[bench]]
harness = false
name = "throughput_vs_baseline"
path = "benches/cmp/throughput/throughput_vs_baseline.rs"

[[bench]]
harness = false
name = "throughput_vs_tracing"
path = "benches/cmp/throughput/throughput_vs_tracing.rs"

[[bench]]
harness = false
name = "throughput_vs_env_logger"
path = "benches/cmp/throughput/throughput_vs_env_logger.rs"

[[bench]]
harness = false
name = "throughput_vs_slog"
path = "benches/cmp/throughput/throughput_vs_slog.rs"

# Scaling comparison

[[bench]]
harness = false
name = "scaling_vs_baseline"
path = "benches/cmp/scaling/scaling_vs_baseline.rs"

[[bench]]
harness = false
name = "scaling_vs_tracing"
path = "benches/cmp/scaling/scaling_vs_tracing.rs"

[[bench]]
harness = false
name = "scaling_vs_env_logger"
path = "benches/cmp/scaling/scaling_vs_env_logger.rs"

[[bench]]
harness = false
name = "scaling_vs_slog"
path = "benches/cmp/scaling/scaling_vs_slog.rs"

[[example]]
name = "sink_custom"
path = "examples/sinks/custom.rs"

[[example]]
name = "sink_tracing_appender"
path = "examples/sinks/tracing_appender.rs"

[[example]]
name = "sink_logroller"
path = "examples/sinks/logroller.rs"

[[example]]
name = "sink_stderr"
path = "examples/sinks/stderr.rs"
